tests/ui/coherence/coherence-free-vs-bound-region.stderr
error: conflicting implementations of trait `TheTrait` for type `fn(&u8)`
  --> $DIR/coherence-free-vs-bound-region.rs:16:1
   |
LL | impl<'a> TheTrait for fn(&'a u8) {}
   | -------------------------------- first implementation here
LL |
LL | impl TheTrait for fn(&u8) {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `fn(&u8)`
   |
   = warning: the behavior may change in a future release
   = note: for more information, see issue #56105 <https://github.com/rust-lang/rust/issues/56105>
   = note: this behavior recently changed as a result of a bug fix; see rust-lang/rust#56105 for details
note: the lint level is defined here
  --> $DIR/coherence-free-vs-bound-region.rs:10:9
   |
LL | #![deny(coherence_leak_check)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

